# mOMonadOS

./: .gitignore  .ovmf_vars.fd  Cargo.toml  IG_catalog.json  Makefile  NOVEL_PROGRAMS.md  README.md  REBIS_INTEGRATION.md  REVIEW.md  SHUNTED_PROGRAMS.md  SYNTESE_FREEZE_NOTE.md  SYNTHESE_FREEZE_NOTE.md  USER_GUIDE.md  ask  build_bootimage.sh  commit.txt  delta_s_results.json  dialect_3d_torus.html  dialect_3d_torus.html.bak  dialect_3d_torus.html.gridbak  dialect_cfg_viz.html  dialect_cfg_viz_head.py  dialect_positions.json  dialect_torus.html  experiment_delta_s.py  gen_cfg_dialect_viz.py  gen_cfg_viz.py  gen_dialect_torus.py  gen_kernel_torus.py  generate_rust_catalog.py  kernel_3d_visualizer.html  kernel_3d_visualizer_2.html  kernel_3d_visualizer_3.html  kernel_3d_visualizer_3.html.bak  kernel_viz_hotpink_1650.html  momonados.ld  patch_cfg_gates.py  run.sh  run_serial_cmds.sh  run_tower_d2048.sh  (+2 more)
.cargo/: config.toml
src/: aleph.rs  algebra.rs  ask.rs  belnap.rs  belnap_c4.rs  belnap_shor.rs  belnap_sic_bridge.rs  bifurcation_test.rs  boot.rs  canonical_ordinal.rs  catalog.rs  catalog_ask_subset.rs  catalog_ask_subset_names.txt  cl8nk.rs  clay_status.rs  clay_witness.rs  consciousness.rs  constant_closure.rs  crystal.rs  d12_sic.rs  d2048_sic.rs  d2048_sieve.rs  dialect.rs  dialect_expansion.rs  divisor_ring.rs  entropy.rs  frob_verify.rs  frobenius_unify.rs  imas_ig.rs  interrupts.rs  kernel.rs  main.rs  manus.rs  menu.rs  mersenne_parallel.rs  para_category.rs  para_rh.rs  para_temporal.rs  para_ym.rs  parasm.rs  (+12 more)
tests/: sic_povm_verify.rs  sic_verify.py
(+38 files in other folders)
