[package]
name = "omonad_metal"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api    = "0.11"
x86_64            = "0.14"
spin              = "0.9"
lazy_static       = { version = "1.5", features = ["spin_no_std"] }
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
